objects/PolicyDocumentAssociation_On_Certificate__c.object
<CustomObject>
    <fields>
        <fullName>Certificate_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Certificate Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Policy Document Associations (On Certificate)</relationshipLabel>
        <relationshipName>Policy_Document_Associations_OnCert</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Document_Last_Update_Date__c</fullName>
        <formula>Policy_Document__r.Document_Last_Updated_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Last Update Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Document_Link__c</fullName>
        <formula>Policy_Document__r.Document_Link__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <formula>Text (Policy_Document__r.Document_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Policy_Doc_Assoc_On_Cert_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Policy Doc Assoc (On Cert) External Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_Document__c</fullName>
        <label>Document Id</label>
        <referenceTo>Policy_Document_On_Certificate__c</referenceTo>
        <relationshipLabel>Policy Document Associations</relationshipLabel>
        <relationshipName>Policy_Document_Associations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Source_Policy_Doc_Assoc_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Policy Document Association (On Case)</label>
        <referenceTo>Policy_Document_Association_On_Case__c</referenceTo>
        <relationshipLabel>Policy Document Associations</relationshipLabel>
        <relationshipName>Policy_Document_Associations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WRONG_Source_Policy_Doc_Assoc_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WRONG Case Policy Doc Assoc Id</label>
        <referenceTo>PolicyDocumentAssociation_On_Certificate__c</referenceTo>
        <relationshipLabel>Policy Document Associations</relationshipLabel>
        <relationshipName>Policy_Document_Associations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Policy Document Association</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Association Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Policy Document Associations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>